# Configuracion

./: .bashrc  .gitignore  .tasks_cpp  .vimrc  .vimspector.json  .zshrc  CMakeLists.txt  Makefile  README.md  bringThemAll.sh  coc-settings.json  color_coded_script  create  exportar  kitty.conf  rc.lua  script.sh
.config/awesome/: rc.lua
.config/kitty/: kitty.conf  kitty.conf.bak  open-actions.conf
.config/kitty/kitty/: kitty.conf
.config/nvim/: _init.vim  init.lua  init.vim  tasks.ini
.config/nvim/lua/: debugger.lua  explorer.lua  finder.lua  fugitive.lua  lsp.lua  neoterm.lua  plugins.lua  start-screen.lua  statusline.lua  tabline.lua  treesitter.lua
.skeletons/: .skeleton.cout  .skeleton.cpp  .skeleton.doxygen  .skeleton.doxygen_beginning
awesome/: rc.lua
scripts/: compile_full_vim.sh  create
